Vector: build new indexing service